remove favourite motel
