# server/service/user.go
@@ -8,6 +8,10 @@ type userService struct {
 	userRepository model.UserRepositoryInterface
 }
 
+func (u userService) RemoveMotelFavourites(motelCode string, userCode string) (response *model.GetOneResponse, httpCode int) {
+	return u.userRepository.RemoveMotelFavourites(motelCode, userCode)
+}
+
 func (u userService) AddMotelFavourites(motelCode string, userCode string) (response *model.GetOneResponse, httpCode int) {
 	return u.userRepository.AddMotelFavourites(motelCode, userCode)
 }
